Updated with media query

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                     <i class="fa-solid fa-hand"></i>
                 </span>
                 <div class="topic">
-                    <p>offring</p>
+                    <p>Offering</p>
                     <p>Why Us</p>
                     <p>Stories</p>
                     <p>Help</p>
-                    <a href=""><i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+                    <a href="exteneted pages/first.html"><i class="fa-solid fa-arrow-right-to-bracket"></i></a>
                 </div>
 
 
